--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./api/server.js"
   },
   "author": "",
   "license": "ISC"
