--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "https://ukraine-api.herokuapp.com/",
+            "url": "https://ukraine-api.herokuapp.com",
             "webRoot": "${workspaceFolder}"
         }
     ]
